@@ -1,3 +1,5 @@
+* Added missing requires in lobbyist.rb.
+
 === 0.3.39 2013-11-12
 
 * Added contact transcribe_allowed api call.
